# my-translator

./: .gitignore  README.md
compact-translator/: package-lock.json  package.json
compact-translator/docs/: architecture-overview.md  smoke-test-2026-04-20.md  tts-flow.md
compact-translator/src/: index.html
compact-translator/src-tauri/: Cargo.toml  tauri.conf.json
compact-translator/src-tauri/capabilities/: default.json
compact-translator/src-tauri/src/: lib.rs  main.rs  settings.rs
compact-translator/src-tauri/src/audio/: wasapi.rs
compact-translator/src-tauri/src/commands/: audio.rs  deepgram.rs  edge_tts.rs  mod.rs  transcript.rs
compact-translator/src/js/: app.js  bootstrap.js  deepgram-client.js  settings.js  tts-service.js  ui.js
compact-translator/src/styles/: main.css
docs/: file_structure.md  smoke-test-2026-04-20.md  stt-flow.md  ttt-flow.md  verification-checklist.md
docs/style-lab/: base_crystal_ball.css  base_crystal_ball_clean.css  css_extracted.css
scripts/runtime/: local_whisper_pipeline.py
scripts/setup/: setup_local_whisper.py
scripts/translate/: text_translate.py
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  settings.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/commands/: azure_speech.rs  common.rs  (+5 more)
src/js/: app-deepgram-methods.js  app-local-methods.js  app-state.js  app.js  audio-player.js  bootstrap.js  deepgram-utils.js  deepgram.js  edge-tts.js  i18n.js  local-transcript-utils.js  settings.js  tauri-compat.js  tauri.js  transcript-renderer.js  ui.js
src/styles/: main.css
(+3 files in other folders)
