[package]
name = "compact-translator"
version = "0.1.0"
description = "Compact speech translator for reporting"
authors = ["phucnt"]
edition = "2021"

[lib]
name = "compact_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
cpal = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "native-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
http = "1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
screencapturekit = "1.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_Foundation",
] }
